@@ -3630,3 +3630,9 @@ Fait.
 -------------------------------------------------------
 
 Fait.
+
+
+#256 - BDD - Passer type fichiers à "structure related"
+-------------------------------------------------------
+
+Fait.
