@@ -3,23 +3,16 @@ import datetime
 from south.db import db
 from south.v2 import SchemaMigration
 from django.db import models, connection
-from django.db.utils import DatabaseError
 from django.conf import settings
 
 
 class Migration(SchemaMigration):
 
     def forwards(self, orm):
-        try:
-            db.rename_table('types_fichiers', 'fl_b_fichier')
-        except DatabaseError:
-            # Fails if already exists since paperclip became separate app
-            connection.close()
-            db.delete_table('types_fichiers')
+        db.delete_table('types_fichiers')  # Do not rename, or it will clash with paperclip models
         db.rename_table('liste_de_tous_les_organismes', 'm_b_organisme')
 
     def backwards(self, orm):
-        db.rename_table('fl_b_fichier', 'types_fichiers')
         db.rename_table('m_b_organisme', 'liste_de_tous_les_organismes')
 
     models = {
